# sneakers-scraper

./: .gitignore  README.md  pyproject.toml  review-snippet.html  sample-listing-page.html  sample-reviews-page.html  scraper.py
