[tool.poetry]
name = "sneakers-scraper"
version = "0.1.0"
description = "web scraper to determine the most sold men's sneakers"
authors = ["inth3wild"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.11.11"
beautifulsoup4 = "^4.12.3"
textblob = "^0.19.0"
sqlalchemy = "^2.0.37"
xlsxwriter = "^3.2.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
